deployments/null-cloud/base/ui/deployment.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: web
  labels:
    name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eddington-ui
spec:
  selector:
    matchLabels:
      app: eddington-ui
  template:
    metadata:
      labels:
        app: eddington-ui
    spec:
      containers: 
      - name: eddington-ui
        image: nullchannel/eddington-ui:8527d041ee72ee474b55819f11a70262053ec514
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
