deployments/null-cloud/base/ui/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eddington-ui-vs 
spec:
  hosts:
  - "*"
  gateways:
  - nullcloud-gateway
  http:
  - route:
    - destination:
        host: eddington-ui
        port:
          number: 80
